# SlicerDRAISegmentation

./: CMakeLists.txt  LICENSE  README.md
DRAISegmentation/: CMakeLists.txt  DRAISegmentation.py
